# mobotscp

./: .gitignore  .rosinstall  CMakeLists.txt  README.md  install.sh  package.xml  setup.py
data/objects/: wing.kinbody.xml
data/objects/meshes/: wing.stl
data/reachability/kinematics.bf9a8ff679e76751357fe6c1d9474335/: ikfast0x1000004a.Transform6D.0_1_2_3_4_5.cpp  ikfast0x1000004a.Transform6D.0_1_2_3_4_5.pp
data/reachability/robot.360934e04e0bef103c4d5aec3f8fbd3a/: fkr.mobile_manipulator_drill_110-150degc9b474b6e8b7cd0eb3b110b3159db037.pp  linkstatistics.pp
data/reachability/robot.ade623e25f083ef48ddd0e0bb65bf3cf/: fkr.mobile_manipulator_drill_114_148degc9b474b6e8b7cd0eb3b110b3159db037.pp  fkr.mobile_manipulator_drill_wing_taskc9b474b6e8b7cd0eb3b110b3159db037.pp  linkstatistics.pp
data/robots/: denso_arm.robot.xml  mobile_manipulator.robot.xml  mobile_manipulator_drill.robot.xml  ridgeback_base.robot.xml
data/worlds/: empty_world.env.xml  obstacle_drilling_task.env.xml  wing_drilling_task.env.xml
gazebo/: drilling_task_controllers.launch  drilling_task_gazebo.launch  drilling_task_gazebo.py  drilling_task_hardware_interface.launch
scripts/: MoboTSCP_obstacle_drilling_task.py  MoboTSCP_wing_drilling_2sides.py  MoboTSCP_wing_drilling_demo.py  OpenRAVE_drilling_task.py  ROS_drilling_task.py  ROS_drilling_task_jerklimit.py  analyze_fkr.py  display_demo_task.py  display_task.py  display_world.py  generate_FKR.py  solve_fkr.py
src/mobotscp/: __init__.py  clustering.py  connection.py  fkreach.py  geoscp.py  pointscp.py  solver.py  utils.py
(+9 files in other folders)
