<?xml version="1.0"?>
<package format="2">
  <name>mobotscp</name>
  <version>0.1.0</version>
  <description>The MoboTSCP package</description>

  <maintainer email="quangnam.nguyen@ntu.edu.sg">Quang-Nam Nguyen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>raveutils</depend>
  <depend>robotsp</depend>

  <exec_depend>baldor</exec_depend>
  <exec_depend>python-h5py</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-networkx</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>time</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
